deps/v8/test/message/fail/async-arrow-invalid-rest-2.out
*%(basename)s:7: SyntaxError: Rest parameter may not have a default initializer
var f = async (a, ...x = 10) => x;
                         ^^
SyntaxError: Rest parameter may not have a default initializer
